--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,21 +1,25 @@
-<ul class="menu">
-        
-    <li class="nav-logo-wrapper">
-        <img class="nav-logo" src="{{ site.baseurl }}/images/logo.png" alt="{{ site.title }}" />
-    </li>
-      
-    {% for link in site.data.navigation.links %}
-        
-        {% assign class = "" %}
-    
-        {% if link.link == page.url %}
-                {% assign class = class | append: " active" %}
-        {% endif %}
-                
-        <li class="{{ class }}">
-            <a href="{{ site.baseurl }}{{ link.link }}">{{ link.name }}</a>
+<div class="navigation-wrapper hide-for-print">
+
+    <ul class="menu">
+            
+        <li class="nav-logo-wrapper">
+            <img class="nav-logo" src="{{ site.baseurl }}/images/logo.png" alt="{{ site.title }}" />
         </li>
           
-    {% endfor %}
+        {% for link in site.data.navigation.links %}
             
-</ul>
+            {% assign class = "" %}
+        
+            {% if link.link == page.url %}
+                    {% assign class = class | append: " active" %}
+            {% endif %}
+                    
+            <li class="{{ class }}">
+                <a href="{{ site.baseurl }}{{ link.link }}">{{ link.name }}</a>
+            </li>
+              
+        {% endfor %}
+                
+    </ul>
+
+</div>
