--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,8 +56,6 @@
 
 	{% if jekyll.environment == 'production' %}
     {% endif %}
-    
-   
 
 </head>
 	<body class="{% if page.url == '/' %}home{% else %}{{ page.path | remove: '.html' | remove: '.md' }}{% endif %}">
@@ -128,7 +126,7 @@
 		<!--<![endif]-->
 	
 		<!-- Go to www.addthis.com/dashboard to customize your tools -->
-		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5b00b3ee6d850413"></script>
+		<script type="text/javascript" src=""></script>
 		
 	</body>
 </html>
