--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/ie.css" />
 	<link rel="stylesheet" href="{{ site.baseurl }}/js/lightbox/css/lightgallery.css" />
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/map.css" />
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous" />
 	{% if page.url == "/" %}
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/slider.css" />
 	{% endif %}
