Updated '_layouts/default.html' via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/typography.css" />
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/navigation.css" />
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/buttons.css" />
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/helper.css" />
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/hero.css" />
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/footer.css" />
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/form.css" />
