--- a/css/slider.css
+++ b/css/slider.css
@@ -159,12 +159,12 @@
 .slider-pagination {
   position: absolute;
   bottom: 30px;
-  left: 5%;
+  left: 0;
+  right: 0;
   z-index: 1000;
   display: flex;
   align-items: center; /* Vertical alignment */
-  /* justify-content: center; */ /* Horizontal alignment */
-  /* width: 100%; */
+  justify-content: center; /* Horizontal alignment */
 }
 .slider-pagination label {
   width: 8px;
