--- a/css/slider.css
+++ b/css/slider.css
@@ -260,40 +260,7 @@
   width: 100%;
   height: 100%;
   z-index: 1000;
-  background: #000;
-}
-#loader {
-  display: block;
-  position: relative;
-  left: 50%;
-  top: 40vh;
-  width: 120px;
-  height: 120px;
-  margin: -60px 0 0 -60px;
-  background-color: #ccc;
-  border-radius: 100%;  
-  -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
-  animation: sk-scaleout 1.0s infinite ease-in-out;
-  background-image: url(../images/foot-icon.gif);
-}
-
-@-webkit-keyframes sk-scaleout {
-  0% { -webkit-transform: scale(0) }
-  100% {
-    -webkit-transform: scale(1.0);
-    opacity: 0;
-  }
-}
-
-@keyframes sk-scaleout {
-  0% { 
-    -webkit-transform: scale(0);
-    transform: scale(0);
-  } 100% {
-    -webkit-transform: scale(1.0);
-    transform: scale(1.0);
-    opacity: 0;
-  }
+  background: #000 url(../images/foot-icon.gif) center center no-repeat;
 }
  
 /* JavaScript Turned Off */
