--- a/css/slider.css
+++ b/css/slider.css
@@ -260,6 +260,7 @@
   width: 100%;
   height: 100%;
   z-index: 1000;
+  /* Spinner created here: https://loading.io/animation/icon/ */
   background: #000 url(../images/foot-icon.gif) center center no-repeat;
 }
  
