--- a/_includes/lightbox.html
+++ b/_includes/lightbox.html
@@ -10,7 +10,8 @@
             <div class="cell" data-src="{{ site.baseurl }}{{ image.gallery_image }}">
                     
                 <a href="{{ site.baseurl }}{{ image.gallery_image }}" title="{% if image.title %}{{ image.title }}{% else %}{{ page.title }}{% endif %}">
-                        <img src="//images.weserv.nl/?url={{ site.url | remove: 'https://' | remove: 'http://' }}{{ image.gallery_image }}&w=251&h=251&t=square" alt="{% if image.title %}{{ image.title }}{% else %}{{ page.title }}{% endif %}" title="{% if image.title %}{{ image.title }}{% else %}{{ page.title }}{% endif %}" />
+                    <!-- IMGIX -->
+                    <img src="{{ site.imgix_url }}{{ image.gallery_image }}?w=250&h=250&fit=crop" alt="{% if image.title %}{{ image.title }}{% else %}{{ page.title }}{% endif %}" title="{% if image.title %}{{ image.title }}{% else %}{{ page.title }}{% endif %}" />
                 </a>
     
             </div>
