Updated '_includes/hero.html' via CloudCannon

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,7 +1,7 @@
 <!-- if there is a HERO IMAGE for this page then use that -->
 {% if page.hero_image %}
   
-    <div class="hero a1 hide-for-print" style="background-image: url('{{ site.url }}{{ site.baseurl }}{{ page.hero_image }}')"></div>
+    <div class="hero hide-for-print" style="background-image: url('{{ site.url }}{{ site.baseurl }}{{ page.hero_image }}')"></div>
   
 {% else %}
     
@@ -16,7 +16,7 @@
         
         {% if section_top_page.hero_image %}
 
-            <div class="hero a2 hide-for-print" style="background-image: url('{{ site.url }}{{ site.baseurl }}{{ section_top_page.hero_image }}')"></div>
+            <div class="hero hide-for-print" style="background-image: url('{{ site.url }}{{ site.baseurl }}{{ section_top_page.hero_image }}')"></div>
         
         {% endif %}
      
@@ -31,7 +31,7 @@
         
         {% if product_type_page.hero_image %}
 
-            <div class="hero a3 hide-for-print" style="background-image: url('{{ site.url }}{{ site.baseurl }}{{ product_type_page.hero_image }}')"></div>
+            <div class="hero hide-for-print" style="background-image: url('{{ site.url }}{{ site.baseurl }}{{ product_type_page.hero_image }}')"></div>
             
         {% else %}
         
@@ -42,7 +42,7 @@
         
             {% if section_top_page.hero_image %}
 
-                <div class="hero a4 hide-for-print" style="background-image: url('{{ site.url }}{{ site.baseurl }}{{ section_top_page.hero_image }}')"></div>
+                <div class="hero hide-for-print" style="background-image: url('{{ site.url }}{{ site.baseurl }}{{ section_top_page.hero_image }}')"></div>
         
             {% endif %}
         
@@ -57,7 +57,7 @@
         
         {% if section_top_page.hero_image %}
 
-        <div class="hero a5 hide-for-print" style="background-image: url('{{ site.url }}{{ site.baseurl }}{{ section_top_page.hero_image }}')"></div>
+        <div class="hero hide-for-print" style="background-image: url('{{ site.url }}{{ site.baseurl }}{{ section_top_page.hero_image }}')"></div>
         
         {% endif %}
             
