--- a/css/app.css
+++ b/css/app.css
@@ -34,8 +34,11 @@
     background: #ddd;
     padding: 2rem;
 }
+/* ---------------- */
+/* Special Sections */
+/* ---------------- */
 
-section.blurb {
+.blurb {
     background: #fff url('../images/pirate-kids.jpg') no-repeat;
     background-size: cover;
     background-position: right top;
@@ -49,10 +52,35 @@ section.blurb {
         0 100% /* left bottom */
     );
 }
-
 .philosophy {
     background: #d4a300;
 }
+.philosophy::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    background-repeat: repeat-x;
+    height: 10px;
+    background-size: 20px 20px;
+    background-image: radial-gradient(circle at 10px 15px,transparent 12px,#fff 13px);
+}
+.philosophy::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    background-repeat: repeat-x;
+    height: 15px;
+    background-size: 40px 20px;
+    background-image: radial-gradient(circle at 10px 0px,#fff 12px,transparent 13px);
+}
+.philosophy * {
+    color: #fff;
+}
+
 .main-heading {
     background: #0181fe;
     padding-top: 2rem;
