--- a/css/app.css
+++ b/css/app.css
@@ -52,6 +52,10 @@
         0 100% /* left bottom */
     );
 }
+.blurb-content {
+   padding: 40px 40px 30px 40px;
+   background: rgba(255,255,255,0.7); margin: 30px 0 40px 0;
+}
 .philosophy {
     background: #d4a300;
 }
