--- a/css/app.css
+++ b/css/app.css
@@ -58,6 +58,7 @@
    background: rgba(255,255,255,0.7); margin: 30px 0 40px 0;
 }
 .philosophy {
+    position: relative;
     background: #d4a300;
 }
 .philosophy::before {
