--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<div class="wrapper-padding text-center">
+<div class="wrapper-padding text-center padding-top-small padding-bottom-small">
     <div class="grid-container">
         <div class="grid-x grid-margin-x" style="position: relative;">
             
