--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,30 +1,32 @@
-<div class="wrapper-padding text-center padding-top-small padding-bottom-small">
-    <div class="grid-container">
-        <div class="grid-x grid-margin-x" style="position: relative;">
-            
-            <div class="cell text-center">
+<div class="footer hide-for-print">
+    <div class="wrapper-padding text-center padding-top-small padding-bottom-small">
+        <div class="grid-container">
+            <div class="grid-x grid-margin-x" style="position: relative;">
                 
-                {% assign contact = site.data.contact %}
+                <div class="cell text-center">
                     
-                {% if contact.address_description %}
-                    <p>{{ contact.address_description | newline_to_br }}</p>
-                {% endif %}
+                    {% assign contact = site.data.contact %}
+                        
+                    {% if contact.address_description %}
+                        <p>{{ contact.address_description | newline_to_br }}</p>
+                    {% endif %}
+                    
+                    {% if contact.phone %}
+                        <h2><i class="fas fa-phone"></i>&nbsp; {{ contact.phone }} &nbsp;<i style="color: transparent;" class="fas fa-phone"></i></h2>
+                    {% endif %}
+                    
+                    {% if contact.facebook_url %}
+                        <h2 ><a href="{{ contact.facebook_url }}" target="_blank"><i class="fab fa-facebook-square"></i></a></h2>
+                    {% endif %}
+    
+                    <small>&copy; {{ site.title }} {{ site.time | date: '%Y' }}</small>
+                    <!-- <br /> -->
+                    <!-- <small>website: <a style="color: #fff;" href="http://www.lumina.net.nz">www.lumina.net.nz</a></small> -->
+                </div>
                 
-                {% if contact.phone %}
-                    <h2><i class="fas fa-phone"></i>&nbsp; {{ contact.phone }} &nbsp;<i style="color: transparent;" class="fas fa-phone"></i></h2>
-                {% endif %}
+                <img src="{{ site.baseurl }}/images/footprint-orange.png" alt="{{ site.title }}" style="position: absolute; top: -90px; right: -90px; z-index: 999;" />
                 
-                {% if contact.facebook_url %}
-                    <h2 ><a href="{{ contact.facebook_url }}" target="_blank"><i class="fab fa-facebook-square"></i></a></h2>
-                {% endif %}
-
-                <small>&copy; {{ site.title }} {{ site.time | date: '%Y' }}</small>
-                <!-- <br /> -->
-                <!-- <small>website: <a style="color: #fff;" href="http://www.lumina.net.nz">www.lumina.net.nz</a></small> -->
             </div>
-            
-            <img src="{{ site.baseurl }}/images/footprint-orange.png" alt="{{ site.title }}" style="position: absolute; top: -90px; right: -90px; z-index: 999;" />
-            
         </div>
     </div>
 </div>
