Updated '_includes/footer.html' via CloudCannon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-<div class="footer hide-for-print">
-    <div class="wrapper-padding text-center padding-top-small padding-bottom-small">
+
+    <div class="footer wrapper-padding text-center padding-top-small padding-bottom-small hide-for-print">
         <div class="grid-container">
             <div class="grid-x grid-margin-x" style="position: relative;">
                 
@@ -29,4 +29,3 @@
             </div>
         </div>
     </div>
-</div>
