--- a/css/footer.css
+++ b/css/footer.css
@@ -24,6 +24,12 @@
     background-size: 40px 20px;
     background-image: radial-gradient(circle at 10px 0px,#fff 12px,transparent 13px);
 }
+.about .footer::before {
+    background-image: 0;
+}
+.about footer::after {
+    background-image: 0;
+}
 .footer * {
     color: #fff;
 }
