Updated 'css/footer.css' via CloudCannon

--- a/css/footer.css
+++ b/css/footer.css
@@ -27,7 +27,7 @@
 .about .footer::before {
     background-image: 0;
 }
-.about footer::after {
+.about .footer::after {
     background-image: 0;
 }
 .footer * {
