--- a/css/footer.css
+++ b/css/footer.css
@@ -25,10 +25,10 @@
     background-image: radial-gradient(circle at 10px 0px,#fff 12px,transparent 13px);
 }
 .about .footer::before {
-    background-image: 0;
+    background-image: 0 !important;
 }
 .about .footer::after {
-    background-image: 0;
+    background-image: 0 !important;
 }
 .footer * {
     color: #fff;
