Updated 'css/footer.css' via CloudCannon

--- a/css/footer.css
+++ b/css/footer.css
@@ -26,9 +26,11 @@
 }
 .about .footer::before {
     background-image: 0 !important;
+    border: solid 2px green;
 }
 .about .footer::after {
     background-image: 0 !important;
+    border: solid 2px green;
 }
 .footer * {
     color: #fff;
