--- a/css/app.css
+++ b/css/app.css
@@ -57,6 +57,13 @@
    padding: 40px 40px 30px 40px;
    background: rgba(255,255,255,0.7); margin: 30px 0 40px 0;
 }
+.boy {
+   position: absolute;
+   left: -200px;
+   bottom: -70px;
+   z-index: 999;
+   max-width: 450px;
+}
 .philosophy {
     position: relative;
     background: #d4a300;
