Updated 'css/footer.css' via CloudCannon

--- a/css/footer.css
+++ b/css/footer.css
@@ -24,6 +24,9 @@
     background-size: 40px 20px;
     background-image: radial-gradient(circle at 10px 0px,#fff 12px,transparent 13px);
 }
+.about .footer {
+    border-top: solid 3px #fff;
+}
 .about .footer::before {
     height: 0;
 }
