Updated 'css/form.css' via CloudCannon

--- a/css/form.css
+++ b/css/form.css
@@ -7,14 +7,13 @@ form {
 
 form input {
     margin-bottom: 20px !important;
-    border: solid 2px #0181fe;
 }
-
 form textarea {
     min-height: 175px;
+}
+[type=text], [type=password], [type=date], [type=datetime], [type=datetime-local], [type=month], [type=week], [type=email], [type=number], [type=search], [type=tel], [type=time], [type=url], [type=color], textarea {
     border: solid 2px #0181fe;
 }
-
 form label {
     font-size: 1rem;
 }
