Updated 'css/footer.css' via CloudCannon

--- a/css/footer.css
+++ b/css/footer.css
@@ -39,10 +39,8 @@
 .footer p {
     margin-bottom: 0;
 }
-#facebook-footer {
+.footer .fab-facebook-square {
     display: block;
     margin-bottom: 10px;
-}
-#facebook-footer .fa {
     font-size: 3.5rem;
 }
