Updated 'css/footer.css' via CloudCannon

--- a/css/footer.css
+++ b/css/footer.css
@@ -39,7 +39,7 @@
 .footer p {
     margin-bottom: 0;
 }
-.footer .fab-facebook-square {
+.footer .fa-facebook-square {
     display: block;
     margin-bottom: 10px;
     font-size: 3.5rem;
