Updated 'css/typography.css' via CloudCannon

--- a/css/typography.css
+++ b/css/typography.css
@@ -28,6 +28,9 @@ h3 {
     font-weight: 700;
     font-weight: 500;
 }
+.contact .fa-facebook-square {
+    font-size: 3rem;
+}
 
 
 /* 640 pixels */
