--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,7 +68,7 @@
     {% endif %}
 
 </head>
-	<body class="{% if page.url == '/' %}home{% else %}{{ page.path | remove: '.html' | remove: '.md' }}{% endif %}">
+	<body class="{% if page.url == '/' %}home{% elsif page._section_id %}{{ page._section_id }}{% else %}{{ page.path | remove: '.html' | remove: '.md' }}{% endif %}">
 	    
 	    <div class="off-canvas position-left" id="my-off-canvas" data-off-canvas>
             {% include navigation-mobile.html %}
