--- a/_includes/heading-post.html
+++ b/_includes/heading-post.html
@@ -1,19 +1,10 @@
-<div class="heading">
-    
-    <div class="wrapper-padding">
-    
-        <div class="grid-container">
-            <div class="grid-x grid-margin-x">
-                 
-                <div class="cell">
-                    
-                    <h1><a href="/blog/" style="color: #fff; font-size: 70%;">News</a> <span style="font-size: 70%;">/</span> &nbsp; {{ page.title }}</h1>
-                    
-                </div>
-                
+<div class="wrapper-padding main-heading">
+    <div class="grid-container">
+        <div class="grid-x grid-margin-x" style="position: relative;">
+            <div class="cell">
+                <h1><span><a href="/blog/">News:</a></span> {% if page.heading %}{{ page.heading }}{% else %}{{ page.title }}{% endif %}</h1>
             </div>
+            <img class="heading-footprint" src="{{ site.baseurl }}/images/footprint-blue.png" alt="{{ site.title }}" />
         </div>
-    
     </div>
-    
 </div>
