Updated 'css/app.css' via CloudCannon

--- a/css/app.css
+++ b/css/app.css
@@ -107,7 +107,12 @@
 .main-heading h1 {
     color: #fff;
 }
-
+.main-heading .footprint {
+   position: absolute;
+   top: -40px;
+   left: -90px;
+   z-index: 999;
+}
 
 /* -------- */
 /* LINKS    */
