Updated '_includes/heading-post.html' via CloudCannon

--- a/_includes/heading-post.html
+++ b/_includes/heading-post.html
@@ -4,7 +4,7 @@
             <div class="cell">
                 <h1><span><a href="/blog/">News:</a></span> {% if page.heading %}{{ page.heading }}{% else %}{{ page.title }}{% endif %}</h1>
             </div>
-            <img class="heading-footprint" src="{{ site.baseurl }}/images/footprint-blue.png" alt="{{ site.title }}" />
+            <img class="footprint" src="{{ site.baseurl }}/images/footprint-blue.png" alt="{{ site.title }}" />
         </div>
     </div>
 </div>
