Updated '_layouts/post.html' via CloudCannon

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 {% include heading-post.html %}
 
-<div class="wrapper-padding">
+<div class="wrapper-padding padding-top-medium padding-bottom-medium">
     <div class="grid-container">
         
         <div class="grid-x grid-margin-x">
