--- a/_includes/heading-post.html
+++ b/_includes/heading-post.html
@@ -2,7 +2,7 @@
     <div class="grid-container">
         <div class="grid-x grid-margin-x" style="position: relative;">
             <div class="cell">
-                <h1><span><a href="/blog/">News:</a></span> {% if page.heading %}{{ page.heading }}{% else %}{{ page.title }}{% endif %}</h1>
+                <h1><a href="/blog/">News:</a> &nbsp; {% if page.heading %}{{ page.heading }}{% else %}{{ page.title }}{% endif %}</h1>
             </div>
             <img class="footprint" src="{{ site.baseurl }}/images/footprint-blue.png" alt="{{ site.title }}" />
         </div>
