Updated '_includes/blog-navigation.html' via CloudCannon

--- a/_includes/blog-navigation.html
+++ b/_includes/blog-navigation.html
@@ -1,4 +1,4 @@
-<div class="callout sidebar">
+<div class="sidebar">
     <h3>Latest Posts</h3>
     <ul>
     {% for post in site.posts | limit: 10 %}
