Updated 'css/app.css' via CloudCannon

--- a/css/app.css
+++ b/css/app.css
@@ -108,7 +108,7 @@
     color: #fff;
 }
 .main-heading h1 a {
-    color: #fff;
+    color: #fff !important;
 }
 .main-heading .footprint {
    position: absolute;
