--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -134,7 +134,7 @@
 		<!--<![endif]-->
 	
 		<!-- Go to www.addthis.com/dashboard to customize your tools -->
-		<script type="text/javascript" src=""></script>
+		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5c1e9a17452324c9"></script>
 		
 	</body>
 </html>
