--- a/css/blog.css
+++ b/css/blog.css
@@ -28,3 +28,37 @@
     padding: 5px 8px;
     text-decoration: none !important;
 }
+
+/* 640 pixels */
+@media screen and (min-width: 40em) {
+   
+}
+
+/* 1024 pixels */
+@media screen and (min-width: 64em) {
+    
+}
+
+/* 1200 pixels */
+@media screen and (min-width: 75em) {
+    
+    .blog sidebar {
+        padding-left: 40px;
+    }
+}
+
+/* 1280 pixels */
+@media screen and (min-width: 80em) {
+    
+}
+
+/* 1440 pixels */
+@media screen and (min-width: 90em) {
+    
+   
+}
+
+/* 1920 pixels */
+@media screen and (min-width: 120em) {
+
+}
