Updated 'css/typography.css' via CloudCannon

--- a/css/typography.css
+++ b/css/typography.css
@@ -32,7 +32,7 @@ h3 {
     font-size: 3rem;
 }
 blockquote {
-    background: #eee;
+    background: #efefef;
     padding: 30px 40px;
     border-left: solid 15px #ccc;
     font-size: 150%;
