Updated '_includes/footer.html' via CloudCannon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@
                     <!-- <small>website: <a style="color: #fff;" href="http://www.lumina.net.nz">www.lumina.net.nz</a></small> -->
                 </div>
                 
-                <img src="{{ site.baseurl }}/images/footprint-orange.png" alt="{{ site.title }}" style="position: absolute; top: -90px; right: -90px; z-index: 999;" />
+                <img class="footprint" src="{{ site.baseurl }}/images/footprint-orange.png" alt="{{ site.title }}" />
                 
             </div>
     </div>
