Updated 'css/footer.css' via CloudCannon

--- a/css/footer.css
+++ b/css/footer.css
@@ -44,3 +44,6 @@
     margin-bottom: 10px;
     font-size: 3.5rem;
 }
+.footer .footprint {
+   position: absolute; top: -90px; right: -90px; z-index: 999;
+}
