--- a/css/app.css
+++ b/css/app.css
@@ -158,7 +158,7 @@ a[href$=".docx"]:before {
 @media screen and (min-width: 64em) {
     
     .main-wrapper {
-        margin-top: 90px;
+        margin-top: 65px;
     }
     
     .boy {
@@ -169,6 +169,10 @@ a[href$=".docx"]:before {
 
 /* 1200 pixels */
 @media screen and (min-width: 75em) {
+    
+    .main-wrapper {
+        margin-top: 65px;
+    }
     
 }
 
