Updated 'css/app.css' via CloudCannon

--- a/css/app.css
+++ b/css/app.css
@@ -187,6 +187,7 @@ a[href$=".docx"]:before {
     }
     .staff-photo-container {
         margin-right: 20px;
+        text-align: center;
     }
    
 }
