Updated 'css/slider.css' via CloudCannon

--- a/css/slider.css
+++ b/css/slider.css
@@ -290,6 +290,10 @@
 /* 1200 pixels */
 @media screen and (min-width: 75em) {
     
+    .css-slider-wrapper-outer {
+        height: 90vh;
+    }
+    
 }
 
 /* 1280 pixels */
