--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
                 
                 <div class="cell text-center">
                     
-                    {% assign contact = site.data.contact %}
+                    {% assign contact = site.data.settings %}
                         
                     {% if contact.address_description %}
                         <p>{{ contact.address_description | newline_to_br }}</p>
